tests/parsing/smtlib/v2.7/errors/056-declare-const_bad_name_1.smt2
(set-logic ALL)
(declare-const _)
